# cli-resource-monitor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
app/: app.py  cli.py
app/components/: cpu.py  gpu.py  ram.py
app/tests/: test_args.py  test_gpu.py
app/ui/: bar.py  display.py
