[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "resource-monitor"
version = "1.1.2"
description = "CLI resource monitoring tool"
requires-python = ">=3.9"
dependencies = [
    "psutil"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
resource-monitor = "app.cli:main"
